# stat30015

./: LICENSE  README.md  pyproject.toml
HW1/: HW1.ipynb
HW2/: HW2.ipynb
HW3/: HW3.ipynb
HW4/: HW4.ipynb
HW5/: HW5.ipynb
HW6/: HW6.R  HW6.Rmd
HW7/: HW7.Rmd
HW8/: HW8.Rmd
